--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <title>Segunda Entrega CSS</title>
 </head>
 <body>
-   <div>
-    <div class="navbar">
-    <img src="/index.png" class="Logo" alt="Logo principal">
+   <header>
+      
+      <img src="/index.png" class="logo" alt="Logo principal">
+   <nav class="navbar">
+      <ul class="navbar-list">
+         <li><a href="#">Inicio</a></li>
+         <li><a href="#">Servicios</a></li>
+         <li><a href="#">Clientes</a></li>
+         <li><a href="#">Contacto</a></li>
+     
+      </ul>
+   </nav></header>
  
- <ul>
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Servicios</a></li>
-    <li><a href="#">Clientes</a></li>
-    <li><a href="#">Contacto</a></li>
-
- </ul></div></div>
+ 
 </body>
 </html>
